--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+    <source src="" type="video/mp4">
+  </video>
   <section id="weather">
     <p>Loading...</p>
   </section>
